outliers update for 3 datas

--- a/notebooks/eda1.ipynb
+++ b/notebooks/eda1.ipynb
@@ -226,7 +226,13 @@
     "scatter_plots(df)\n",
     "\n",
     "# Clean the data\n",
-    "df_cleaned = data_cleaning(df)"
+    "df_cleaned = data_cleaning(df)\n",
+    "\n",
+    "#outliers detection\n",
+    "for column in ['GHI', 'DNI', 'DHI', 'ModA', 'ModB', 'WS', 'WSgust']:\n",
+    "    outliers = detect_outliers(df,column)\n",
+    "    print(f\"\\nOutliers in {column}:\")\n",
+    "    print(outliers)\n"
    ]
   }
  ],
